Fixed stats on mobile devices

--- a/public/css/phone.less
+++ b/public/css/phone.less
@@ -423,8 +423,8 @@ h2{
 
 /* -----  Style for Stats ----- */
 .chart{
-  width: 300px; 
-  height: 500px;
+  width: 100%; 
+  height: 200px;
 }
 .stats{
   .tab-content{
